<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <!-- Top (weight 3) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/join_desc"
            android:textColor="@color/black"
            android:textSize="24dp" />

    </LinearLayout>

    <!-- Content (weight 6) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_gravity="center_vertical"
        android:weightSum="10"
        android:paddingHorizontal="20dp">

        <!-- 이름 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="이름를 입력하세요"
                android:textSize="18dp" />

        </LinearLayout>

        <!-- 아이디 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="아이디를 입력하세요"
                android:textSize="18dp" />

        </LinearLayout>

        <!-- 비밀번호 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_pw"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="비밀번호를 입력하세요"
                android:textSize="18dp"
                android:inputType="textPassword"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Bottom (weight 1) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        >

        <Button
            android:id="@+id/btn_certify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ic_btn_background"
            android:text="@string/certify"
            android:textSize="24dp"/>

    </LinearLayout>


</LinearLayout>