<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <!-- Top (weight 2) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <!-- Content (weight 7) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:paddingHorizontal="20dp">

        <!-- 아이디 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="아이디를 입력하세요"
                android:textSize="18dp"
                android:inputType="text"/>

        </LinearLayout>

        <!-- 비밀번호 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_pw"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="비밀번호를 입력하세요"
                android:textSize="18dp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <!-- 회원 가입 -->
        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:textColor="@color/black"
            android:gravity="end"
            android:textSize="18dp"
            android:paddingTop="20dp"/>



    </LinearLayout>

    <!-- Bottom (weight 1) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ic_btn_background"
            android:text="@string/login"
            android:textSize="24dp" />

    </LinearLayout>

</LinearLayout>