<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <!-- Top (weight 2) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/charge_balance"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <!-- Content (weight 7) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:weightSum="10">

        <!-- 충전 금액 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/ic_input_background"
            android:paddingLeft="30dp"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge_amount"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/wonEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingRight="20dp"
                android:hint="금액을 입력해주세요"
                android:textSize="36dp"
                android:layout_weight="8"
                android:inputType="number"
                android:gravity="end"/>

        </LinearLayout>

        <!-- 계좌 정보 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- 충전 계좌 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charge_account"
                    android:paddingTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/charge_account_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:textSize="20dp">

                </Spinner>

            </LinearLayout>

            <!-- 거래 후 잔액 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/after_balance"
                    android:paddingTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10,000원"
                    android:paddingTop="20dp"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Bottom (weight 1) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        >

        <Button
            android:id="@+id/btn_certify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ic_btn_background"
            android:text="@string/charge"
            android:textSize="24dp"/>

    </LinearLayout>
</LinearLayout>